syntax = "proto3";

package proto;

service Auth {
    rpc Login(LoginReq) returns (LoginRes);
    rpc Check(CheckAuthReq) returns (CheckAuthRes);
}

message LoginReq {
    string username = 1;
    string password = 2;
} 

message LoginRes {
    bool success = 1;
    string errMsg = 2;
    string token = 3;
}

message CheckAuthReq {
    string token = 1;
}

message CheckAuthRes {
    bool success = 1;
    string uid = 2;
    string errMsg = 3;
}